student_app/force-app/main/default/objects/Course__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <label>Capacity</label>
    <type>Number</type>
    <required>true</required>


    <precision>4</precision>
    <scale>0</scale>





</CustomField>