student_app/force-app/main/default/objects/Course__c/fields/Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Code__c</fullName>
    <label>Course Code</label>
    <type>Text</type>
    <required>true</required>
    <unique>true</unique>
    <length>10</length>






</CustomField>