student_app/force-app/main/default/objects/Course__c/fields/Credits__c.field-meta.xml
<CustomField>
    <fullName>Credits__c</fullName>
    <label>Credits</label>
    <type>Number</type>


    <precision>2</precision>
    <scale>0</scale>





</CustomField>