student_app/force-app/main/default/objects/Course__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>

    <length>1000</length>






</CustomField>