student_app/force-app/main/default/objects/Course__c/fields/Fees__c.field-meta.xml
<CustomField>
    <fullName>Fees__c</fullName>
    <label>Fees</label>
    <type>Currency</type>


    <precision>8</precision>
    <scale>2</scale>





</CustomField>